--- a/puzzlee/templates/base.html
+++ b/puzzlee/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Puzzlee{% endblock title %}</title>
+    <title>{% block title %}Home{% endblock title %} - Puzzlee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An Art Puzzle Game">
     <meta name="author" content="Gabriel Getzie">
@@ -42,6 +42,7 @@
           <a class="navbar-brand" href="{% url 'home' %}">Puzzlee</a>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex justify-content-between w-100">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="visually-hidden">(current)</span></a>
@@ -50,27 +51,30 @@
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
               {% if request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'game:artwork_list' %}">Artworks</a>
+              </li>
+              {% endif %}
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              {% if request.user.is_authenticated %}
                 <li class="nav-item">
                   {# URL provided by django-allauth/account/urls.py #}
-                  <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% translate "My Profile" %}</a>
+                  <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{{ request.user.username }}</a>
                 </li>
                 <li class="nav-item">
                   {# URL provided by django-allauth/account/urls.py #}
                   <a class="nav-link" href="{% url 'account_logout' %}">{% translate "Sign Out" %}</a>
                 </li>
               {% else %}
-                {% if ACCOUNT_ALLOW_REGISTRATION %}
-              <li class="nav-item">
-                {# URL provided by django-allauth/account/urls.py #}
-                <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% translate "Sign Up" %}</a>
-              </li>
-              {% endif %}
                 <li class="nav-item">
                   {# URL provided by django-allauth/account/urls.py #}
                   <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% translate "Sign In" %}</a>
                 </li>
               {% endif %}
+
             </ul>
+            </div>
           </div>
         </div>
       </nav>
@@ -78,7 +82,7 @@
     </div>
 
     <div class="container">
-
+      <main>
       {% if messages %}
         {% for message in messages %}
           <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">
@@ -87,12 +91,18 @@
           </div>
         {% endfor %}
       {% endif %}
-
+      
       {% block content %}
         <p>Use this document as a way to quick start any new project.</p>
       {% endblock content %}
-
+      </main>
     </div> <!-- /container -->
+    <footer class="bg-light">
+        <div class="container text-center text-muted">
+          ©️ 2023 <a href="https://kotsf.com">Kotsf Limited</a>
+          with <a href="https://msteinberg.art">Monica Steinberg</a>
+        </div>
+      </footer>
 
     {% block modal %}{% endblock modal %}
 
