--- a/puzzlee/static/sass/project.scss
+++ b/puzzlee/static/sass/project.scss
@@ -51,7 +51,6 @@ footer {
 
 footer a {
   color: #9f9f9f;
-  text-decoration: none;
 }
 
 footer a:hover {
@@ -65,4 +64,8 @@ main {
 
 .number-input {
   width: 6em;
+}
+
+a {
+  text-decoration: none;
 }
