--- a/puzzlee/templates/base.html
+++ b/puzzlee/templates/base.html
@@ -54,6 +54,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'game:artwork_list' %}">Artworks</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'game:artist_list' %}">Artists</a>
+              </li>
               {% endif %}
             </ul>
             <ul class="navbar-nav ml-auto">
