--- a/puzzlee/static/sass/project.scss
+++ b/puzzlee/static/sass/project.scss
@@ -35,6 +35,11 @@ $red: #b94a48;
   color: $red;
 }
 
+.alert {
+  width: fit-content;
+  margin: 0 auto;
+}
+
 .center-narrow {
   max-width: 40em;
   margin: auto;
@@ -66,3 +71,39 @@ main {
 a {
   text-decoration: none;
 }
+
+/* autocomplete styles */
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  // display: inline-block;
+}
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+  margin-bottom: 10%;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
+}
+/* End autocomplete */
