--- a/puzzlee/templates/base.html
+++ b/puzzlee/templates/base.html
@@ -57,12 +57,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
-              {% if request.user.is_authenticated %}
+              {% if request.user.is_staff %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'game:artwork_list' %}">Artworks</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'game:artist_list' %}">Artists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'collect:listpage_list' %}">Collect</a>
               </li>
               {% endif %}
             </ul>
