--- a/puzzlee/templates/collect/listpage_detail.html
+++ b/puzzlee/templates/collect/listpage_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>{{ object.title }}</h1>
 <p>
-  <a href="{{ objec.url }}">source</a>
+  <a href="{{ object.url }}">source</a>
 </p>
 
 <ul class="list-group">
