--- a/puzzlee/templates/collect/filtered_detail.html
+++ b/puzzlee/templates/collect/filtered_detail.html
@@ -1,44 +1,38 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Filtered detail pages for {{ institution }}</h1>
-
-
-<table class="table">
-  <thead class="position-sticky top-0 bg-black text-white">
-    <tr>
-      <th scope="col" class="text-center">Review</th>
-      <th scope="col">Title</th>
-      <th scope="col">Attribution</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for detailpage in object_list %}
-    <tr id="dp_row_{{ detailpage.pk }}">  
-      <td class="text-center slider">
-        <input type="range" min="0" max="2" value="{{ detailpage.approved }}" id="dp_slider_{{ detailpage.pk }}" list="accept-reject_{{ detailpage.pk }}" />
-        <datalist id="accept-reject_{{ detailpage.pk }}">
-          <option value="0" label="Reject"></option>
-          <option value="1"></option>
-          <option value="2" label="Approve"></option>
-        </datalist>
-      </td>
-      <td>
+<h1>Review detail pages for {{ institution }}</h1>
+<nav class="nav nav-pills mt-3 mb-3">
+  {% for c in approved_choices %}
+  <a 
+    class="nav-link {% if c|first == approved %}active{% endif %}"
+    href="{% url 'collect:detail_filtered' institution c|first %}"
+    >
+    {{ c|last }}
+  </a>
+  {% endfor %}
+</nav>
+<div class="row mb-2">
+  {% for detailpage in object_list %}
+  <div class="col-md-4">
+    <div class="card p-1">
+      <img src="{{ detailpage.artworkimage.get320 }}" class="img-fluid text-center" loading="lazy" />
+      <h5 class="card-title mb-1">
         <a href="{{ detailpage.url }}">
           {{ detailpage.title }}
         </a>
-      </td>
-      <td>
-        {{ detailpage.attribution }}
-      </td>
-    </tr>
-    {% empty %}
-    <tr>
-      <td></td><td></td><td>No detail pages here</td><td></td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+      </h5>
+      <p class="m-0">{{ detailpage.artist_name|default:"Unknown Artist" }}</p>
+      <p class="m-0">{{ detailpage.year }}</p>
+    </div>
+  </div>
+  {% if forloop.counter|divisibleby:"3" %}</div><div class="row mb-2">{% endif %}
+  {% empty %}
+  <p>
+    No detail pages in this section
+  </p>
+  {% endfor %}
+</div>
 
 {% include "pagination.html" %}
 {% endblock content %}
