further accept/reject

--- a/puzzlee/templates/collect/filtered_detail.html
+++ b/puzzlee/templates/collect/filtered_detail.html
@@ -5,16 +5,18 @@
 <nav class="nav nav-pills mt-3 mb-3">
   {% for c in approved_choices %}
   <a 
-    class="nav-link {% if c|first == approved %}active{% endif %}"
+    class="nav-link{% if c|first == approved %} active{% endif %}"
     href="{% url 'collect:detail_filtered' institution c|first %}"
     >
     {{ c|last }}
   </a>
   {% endfor %}
 </nav>
+{% csrf_token %}
+
 <div class="row mb-2">
   {% for detailpage in object_list %}
-  <div class="col-md-4">
+  <div class="col-md-4" id="dp_col_{{ detailpage.id }}">
     <div class="card p-2">
       <img src="{{ detailpage.artworkimage.get320 }}" class="text-center" loading="lazy" />
       <h5 class="card-title mb-1">
@@ -24,14 +26,29 @@
       </h5>
       <p class="m-0">{{ detailpage.artist_name|default:"Unknown Artist" }}</p>
       <p class="m-0">{{ detailpage.year }}</p>
+      
       <div class="row p-2">
         <div class="col text-center">
-          <a class="btn btn-secondary" onClick="rejectDetailPage({{ detailpage.id }});">Reject</a>
-
+          {% if approved != 0 %}
+          <a class="btn btn-secondary" 
+             onClick="setApproved({{ detailpage.id }}, APPROVAL_OPTIONS.rejected);">
+             Reject
+          </a>
+          {% endif %}
         </div>
         <div class="col text-center">
-          <a class="btn btn-success" onClick="approveDetailPage({{ detailpage.id }})">Approve</a>
+          {% if approved != 1 %}
+          <a class="btn btn-secondary"
+             onClick="setApproved({{ detailpage.id }}, APPROVAL_OPTIONS.unset);">Unset</a>
+          </a>
+          {% endif %}
         </div>
+        <div class="col text-center">
+          {% if approved != 2 %}
+          <a class="btn btn-success" 
+             onClick="setApproved({{ detailpage.id }}, APPROVAL_OPTIONS.approved);">Approve</a>
+        </div>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -45,3 +62,7 @@
 
 {% include "pagination.html" %}
 {% endblock content %}
+
+{% block inline_javascript %}
+<script>const APPROVAL_ENDPOINT="{% url 'collect:set_approved' %}"</script>
+{% endblock inline_javascript %}
