--- a/puzzlee/templates/base.html
+++ b/puzzlee/templates/base.html
@@ -70,6 +70,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'collect:listpage_list' %}">Collect</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+              </li>
               {% endif %}
             </ul>
             <ul class="navbar-nav ml-auto">
