--- a/puzzlee/templates/collect/add_artwork_modal.html
+++ b/puzzlee/templates/collect/add_artwork_modal.html
@@ -1,10 +1,11 @@
 {% load crispy_forms_tags %}
-{% comment %} Form to create a new artwork from a detailpage
-to insert in the modal on the review page {% endcomment %}
+{% comment %} 
+Form to create a new artwork from a detailpage
+to insert in the modal on the review page 
+{% endcomment %}
 
 <img 
-src="{{ detailpage.artworkimage.get576 }}" 
-alt="{{ detailpage.title }}" 
-class="img-fluid" />
+  src="{{ detailpage.artworkimage.get576 }}" 
+  alt="{{ detailpage.title }}" class="img-fluid" />
 
 {% crispy form %}
