approval form display

--- a/puzzlee/static/sass/project.scss
+++ b/puzzlee/static/sass/project.scss
@@ -145,3 +145,11 @@ img.card-image:hover {
 img#enlargedImage {
   max-width: 1090px;
 }
+
+img#id_approval_image {
+  max-width: 800px;
+}
+
+// .approve_form_container {
+//   max-width: 800px;
+// }
