--- a/puzzlee/templates/game/home.html
+++ b/puzzlee/templates/game/home.html
@@ -4,9 +4,35 @@
 {% block content %}
 <h1 class="display-1 text-center">Puzzlee</h1>
 <div class="w-100 d-flex flex-column align-items-center mb-3">
-  <img src="{{ artwork.artworkimage.get768 }}" class="img-fluid rounded m-auto" />
-  <h2 class="display-4 text-center">{{ artwork.title }}</h2>
-  <p class="text-center">{{ artwork.artist.fullname }}</p>
+  <div id="painting-container">
+    <img id= "painting" src="{{ artwork.artworkimage.get768 }}" class="img-fluid rounded m-auto" />
+    <div id="grid" class="{{ grid_class }}"></div>
+  </div>
+  <div id="messages" class="mt-3">Test message content</div>
+  <div class="input-group mt-3 mb-3" style="width: 300px;">
+    <label for="guess-input" class="visually-hidden">Guess</label>
+    <input type="text" list="artist-names" 
+           id="guess-input" placeholder="Enter artist's name..." 
+           class="form-control" disabled/>
+    <button id="guess-button" class="btn btn-primary" onClick="checkGuess()" disabled>Guess</button>
+  </div>
+  
+  <datalist id="artist-names">
+    {% for name in all_artists.keys %}
+      <option value="{{ name }}">
+    {% endfor %}
+  </datalist>
+  <div>
+    <h2 id="guess-header">Guesses Remaining: 12</h2>
+    <ul id="guess-list" class="list-group">
+  </ul>
+</div>
 </div>
 
+<div id="answer" class="d-none">{{ answer }}</div>
+{{ all_artists|json_script:"all-artists" }}
 {% endblock content %}
+
+{% block extra_js %}
+<script defer src="{% static 'js/game.js' %}"></script>
+{% endblock extra_js %}
