show title in answer

--- a/puzzlee/templates/game/home.html
+++ b/puzzlee/templates/game/home.html
@@ -30,6 +30,7 @@
 </div>
 
 <div id="answer" class="d-none">{{ answer }}</div>
+<div id="artwork-title" class="d-none">{{ artwork_title }}</div>
 {{ all_artists|json_script:"all-artists" }}
 {% endblock content %}
 
