--- a/puzzlee/templates/base.html
+++ b/puzzlee/templates/base.html
@@ -128,5 +128,8 @@
     </script>
     {% endcomment %}
     {% endblock inline_javascript %}
+    <!-- 100% privacy-first analytics -->
+    <script async defer src="https://sa.puzzlee.art/latest.js"></script>
+    <noscript><img src="https://sa.puzzlee.art/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
