--- a/puzzlee/templates/game/home.html
+++ b/puzzlee/templates/game/home.html
@@ -5,10 +5,10 @@
 <h1 class="display-1 text-center">Puzzlee</h1>
 <div class="w-100 d-flex flex-column align-items-center mb-3">
   <div id="painting-container">
-    <img id= "painting" src="{{ artwork.artworkimage.get768 }}" class="img-fluid rounded m-auto" />
+    <img id= "painting" src="{{ artwork.artworkimage.get768 }}" class="img-fluid rounded m-auto" style="display: none;" />
     <div id="grid" class="{{ grid_class }}"></div>
   </div>
-  <div id="messages" class="mt-3">Test message content</div>
+  <div id="messages" class="mt-3"></div>
   <div class="input-group mt-3 mb-3" style="width: 300px;">
     <label for="guess-input" class="visually-hidden">Guess</label>
     <input type="text" list="artist-names" 
